torch-compiler/src/test/resources/negative/ClassWithoutEntityAnnotation.java
package negative;

import org.brightify.torch.annotation.Id;

public class ClassWithoutEntityAnnotation{
    @Id
    Long id;
    
}